feat: add router of writing record page

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,22 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color:#61dafb;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
+}
+
+.add {
+  background-color:deepskyblue;
+  border-radius: 3px;
+  transition: all;
+  border: none;
+  font-size: calc(6px + 1vmin);
 }
 
 .App-link {
