--- a/src/Views/home.css
+++ b/src/Views/home.css
@@ -23,7 +23,7 @@
     border-radius: 3px;
     position: absolute;
     top: 100px;
-    bottom: 100px;
+    bottom: 170px;
     right: 55%;
     left: 100px;
     padding-top: 20px;
@@ -38,7 +38,7 @@
     border-radius: 3px;
     position: absolute;
     top: 100px;
-    bottom: 100px;
+    bottom: 170px;
     right: 100px;
     left: 55%;
     border: none;
@@ -46,7 +46,7 @@
     font-family: 'Gaegu', cursive;
   }
 
-  .add {
+  .add1 {
     position: absolute;
     right: 40px;
     bottom: 40px;
@@ -59,4 +59,19 @@
     padding: 10px;
     width: 250px;
   }
+
+.add2 {
+    position: absolute;
+    right: 40px;
+    bottom: 110px;
+    background-color:rgb(255, 255, 153);
+    border-radius: 3px;
+    transition: all;
+    border: none;
+    font-size: calc(10px + 1vmin);
+    font-family: 'Gaegu', cursive;
+    padding: 10px;
+    width: 250px;
+}
+  
   
