--- a/src/Views/home.css
+++ b/src/Views/home.css
@@ -4,6 +4,19 @@
   text-align: center; 
 }
 
+.singup {
+  background-color: rgb(255, 255, 153); 
+  width: 6%;
+  height: 45px;
+  font-size: 30px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Gaegu', cursive;
+  position: absolute;
+  right: 170px;
+}
+
 .login {
   background-color: rgb(255, 255, 153); 
   width: 6%;
@@ -14,7 +27,20 @@
   border-radius: 8px;
   font-family: 'Gaegu', cursive;
   position: absolute;
-  right: 30px;
+  right: 55px;
+}
+
+.i {
+  background-color: rgb(255, 255, 153); 
+  width: 3%;
+  height: 45px;
+  font-size: 30px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Gaegu', cursive;
+  position: absolute;
+  right: 10px;
 }
 
 .App-header {
