--- a/src/Views/home.css
+++ b/src/Views/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Gaegu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 .total {
   text-align: center; 
@@ -12,9 +12,9 @@
   font-weight: bold;
   border: none;
   border-radius: 8px;
-  font-family: 'Gaegu', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   position: absolute;
-  right: 170px;
+  right: 220px;
 }
 
 .login {
@@ -25,7 +25,7 @@
   font-weight: bold;
   border: none;
   border-radius: 8px;
-  font-family: 'Gaegu', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   position: absolute;
   right: 55px;
 }
@@ -54,7 +54,7 @@
     color: black;
     margin-bottom: 20px;
     padding-left: 20px;
-    font-family: 'Gaegu', cursive;
+    font-family: 'Noto Sans KR', sans-serif;
   }
   
   .todo {
@@ -82,7 +82,7 @@
     left: 55%;
     border: none;
     font-size: calc(10px + 1vmin);
-    font-family: 'Gaegu', cursive;
+    font-family: 'Noto Sans KR', sans-serif;
   }
 
   .add1 {
