--- a/src/Views/signup.css
+++ b/src/Views/signup.css
@@ -5,7 +5,7 @@
 
 .header {
     font-size: 45px;
-    font-family: 'Gaegu', cursive;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .write {
@@ -19,7 +19,7 @@
     display: inline-block;
     padding: 8px;
     margin-bottom: 20px;
-    font-family: 'Gaegu', cursive;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .btn {
@@ -28,5 +28,5 @@
     font-size: 20px;
     border: none;
     border-radius: 8px;
-    font-family: 'Gaegu', cursive;
+    font-family: 'Noto Sans KR', sans-serif;
 }
